--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "dev:windows": "set NODE_ENV=development&& nodemon app.js",
+    "dev:unix": "export NODE_ENV=development && nodemon app.js",
     "migrate": "npx sequelize db:migrate",
     "seed": "npx sequelize db:seed --seed ./seeders/20240903083634-categorySeeder.js && npx sequelize db:seed --seed ./seeders/20240902122151-recordSeeder.js"
   },
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
