--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev:windows": "set NODE_ENV=development&& nodemon app.js",
     "dev:unix": "export NODE_ENV=development && nodemon app.js",
     "migrate": "npx sequelize db:migrate",
-    "seed": "npx sequelize db:seed --seed ./seeders/20240903083634-categorySeeder.js && npx sequelize db:seed --seed ./seeders/20240902122151-recordSeeder.js"
+    "seed": "npx sequelize db:seed --seed ./seeders/20240906023554-userSeeder.js && npx sequelize db:seed --seed ./seeders/20240903083634-categorySeeder.js && npx sequelize db:seed --seed ./seeders/20240902122151-recordSeeder.js"
   },
   "author": "Alan Huang",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
