feat: user can fast-login with facebook account

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 SESSION_SECRET=name_your_own_secret
+FACEBOOK_CLIENT_ID=your_facebook_client_id
+FACEBOOK_CLIENT_SECRET=your_facebook_client_secret
+FACEBOOK_CALLBACK_URL=http://localhost:3000/oauth2/redirect/facebook
