--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ SESSION_SECRET=name_your_own_secret
 FACEBOOK_CLIENT_ID=your_facebook_client_id
 FACEBOOK_CLIENT_SECRET=your_facebook_client_secret
 FACEBOOK_CALLBACK_URL=http://localhost:3000/oauth2/redirect/facebook
+UNSPLASH_APP_ACCESS_KEY=your_unsplash_app_access_key
