--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "unsplash-js": "^7.0.19"
   }
 }
