modify script 02_seeder_migrate in .ebextensions/migration.config

--- a/.ebextensions/migration.config
+++ b/.ebextensions/migration.config
@@ -3,5 +3,5 @@ container_commands:
         command: ./node_modules/.bin/sequelize db:migrate
         leader_only: true
     02_seeder_migrate:
-        command: ./node_modules/.bin/sequelize db:seed:all
+        command: ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240906023554-userSeeder.js && ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240903083634-categorySeeder.js && ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240902122151-recordSeeder.js
         leader_only: true
