--- a/.ebextensions/migration.config
+++ b/.ebextensions/migration.config
@@ -1,7 +1,13 @@
 container_commands:
-    01_schema_migrate:
+    01_seed_undo:
+        command: ./node_modules/.bin/sequelize db:seed:undo:all
+        leader_only: true
+    02_schema_undo:
+        command: ./node_modules/.bin/sequelize db:migrate:undo:all
+        leader_only: true
+    03_schema_migrate:
         command: ./node_modules/.bin/sequelize db:migrate
         leader_only: true
-    02_seeder_migrate:
+    04_seeder_migrate:
         command: ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240906023554-userSeeder.js && ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240903083634-categorySeeder.js && ./node_modules/.bin/sequelize db:seed --seed ./seeders/20240902122151-recordSeeder.js
         leader_only: true
